add picture in home page

--- a/home_page.html
+++ b/home_page.html
@@ -41,16 +41,16 @@
             </li>
 
             <li class="ad-info-blok couples">
-                <img class="ad-info-blok-img" src="" alt="girl with table">
+                <img class="ad-info-blok-img" src="girl_with_table.svg" alt="girl with table">
                 <h1 class="blok-main-title">Learn a language in a playful way</h1>
                 <p class="blok-description">Make learning words more fun with mini-games</p>
                     <div class="ad-info-blok-game-points">
                         <div class="game-point">
-                            <img class="game-point-img" src="" alt="sneakers">
+                            <img class="game-point-img" src="sneakers.svg" alt="sneakers">
                             <a class="game-point-one-name" href="">Sprint →</a>
                         </div>
                         <div class="game-point">
-                            <img class="game-point-img" src="" alt="speaker">
+                            <img class="game-point-img" src="speaker.svg" alt="speaker">
                             <a class="game-point-two-name" href="">Audio-call →</a>
                         </div>
                     </div>
@@ -60,10 +60,10 @@
                 <h1 class="blok-main-title">Increase your vocabulary</h1>
                 <p class="blok-description">Traditional and new effective approaches to word study</p>
                 <a class="blok-buttom" href="">Textbook →</a>
-                <img class="ad-info-blok-img" src="" alt="girl with books">
+                <img class="ad-info-blok-img" src="girl_with_books.svg" alt="girl with books">
             </li>
             <li class="ad-info-blok couples">
-                <img class="ad-info-blok-img" src="" alt="girl and boy">
+                <img class="ad-info-blok-img" src="girl_and_boy.png" alt="girl and boy">
                 <h1 class="blok-main-title">Watch your progress every day</h1>
                 <p class="blok-description">Save statistics on your achievements, words learned, and mistakes</p>
                 <a class="blok-buttom" href="">Statistics →</a>
