Fixt picture boy_with_book.svg

--- a/home_page.html
+++ b/home_page.html
@@ -37,7 +37,7 @@
                         <span class="points-description">Mini-games</span>
                     </span>
                 </div>
-                <img class="ad-info-blok-img" src="" alt="boy and book">
+                <img class="ad-info-blok-img" src="boy_with_book.svg" alt="boy with book">
             </li>
 
             <li class="ad-info-blok couples">
