--- a/home_page.html
+++ b/home_page.html
@@ -45,14 +45,14 @@
                 <h1 class="blok-main-title">Learn a language in a playful way</h1>
                 <p class="blok-description">Make learning words more fun with mini-games</p>
                     <div class="ad-info-blok-game-points">
-                        <div class="game-point">
+                        <a class="game-point"  href="">
                             <img class="game-point-img" src="sneakers.svg" alt="sneakers">
-                            <a class="game-point-one-name" href="">Sprint →</a>
-                        </div>
-                        <div class="game-point">
+                            <p class="game-point-one-name" >Sprint →</p>
+                        </a>
+                        <a class="game-point"  href="">
                             <img class="game-point-img" src="speaker.svg" alt="speaker">
-                            <a class="game-point-two-name" href="">Audio-call →</a>
-                        </div>
+                            <p class="game-point-two-name">Audio-call →</p>
+                        </a>
                     </div>
             </li>
 
