--- a/menu_page.html
+++ b/menu_page.html
@@ -7,7 +7,7 @@
     <title>Menu</title>
 </head>
 <body>
-    <nav class="site-nabigation">
+    <header class="site-nabigation">
         <span class="menu-close-icon"><a href="">icon</a></span>
         <h1 class="logo-title">GlobalTalk</h1>
         <div class="user-account">
@@ -15,8 +15,8 @@
             <span class="user-name">Alex</span>
             <span class="profile-list-icon"><a href="">icon</a></span>
         </div>
-    </nav>
-    <section class="site-menu">
+    </header>
+    <nav class="site-menu">
         <ul class="site-menu-blok">
             <li><a class="site-menu-blok-components">Home</a></li>
             <li><a class="site-menu-blok-components">Textbook</a></li>
@@ -24,6 +24,6 @@
             <li><a class="site-menu-blok-components">Sprint</a></li>
             <li><a class="site-menu-blok-components">Audio-call</a></li>
         </ul>
-    </section>
+    </nav>
 </body>
 </html>
