website template edits

--- a/home_page.html
+++ b/home_page.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>global-talk-templat</title>
+    <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
 </head>
 <body>
-    <nav class="site-nabigation">
-        <span class="menu-list-icon"><a href="">icon</a></span>
+    <header class="site-navigation">
+            <a class="menu-list-icon" href="">
+                <iconify-icon icon="bx:menu-alt-left"></iconify-icon>
+            </a>
         <h1 class="logo-title">GlobalTalk</h1>
         <div class="user-account">
             <img class="avatar" src="user_avatar.svg" alt="user avatar">
             <span class="user-name">Alex</span>
-            <span class="profile-list-icon"><a href="">icon</a></span>
+            <span class="profile-list-icon"><a href="">⌄</a></span>
         </div>
-    </nav>
+    </header>
     <section class="ad-info">
         <ul class="ad-info-list">
             <li class="ad-info-blok odd">
