Fix problem and finish header layout

--- a/home_page.html
+++ b/home_page.html
@@ -15,9 +15,11 @@
             </a>
         <h1 class="logo-title">GlobalTalk</h1>
         <div class="user-account">
-            <img class="avatar" src="user_avatar.svg" alt="user avatar">
-            <span class="user-name">Alex</span>
-            <span class="profile-list-icon"><a href="">⌄</a></span>
+            <a class="user-account-link" href="">
+                <img class="avatar" src="user_avatar.svg" alt="user avatar">
+                <span class="user-name">Alex</span>
+                <span class="profile-list-icon"><iconify-icon icon="mdi:menu-down-outline"></iconify-icon></span>
+            </a>
         </div>
     </header>
     <section class="ad-info">
