Fix fond and create ferst blok

--- a/home_page.html
+++ b/home_page.html
@@ -25,23 +25,28 @@
     <section class="ad-info">
         <ul class="ad-info-list">
             <li class="ad-info-blok odd">
-                <h2 class="blok-title">E-COURSE PLATFORM</h2>
+                <p class="blok-discription-one">E-COURSE PLATFORM</p>
                 <h1 class="blok-main-title">Learning and teaching online, made easy.</h1>
-                <p class="blok-description">Practice and learn new things with the platform.</p>
+                <p class="blok-description-two">Practice and learn new things with the platform.</p>
                 <a class="blok-buttom" href="">About platform</a>
                 <div class="ad-info-blok-learning-points">
-                    <span class="point-one">
-                        <span class="point-one-icon"></span>
-                        <span class="points-number">600</span>
-                        <span class="points-plus">+</span>
-                        <span class="points-description">Popular words</span>
-                    </span>
-                    <span class="point-two">
-                        <span class="point-two-icon"></span>
-                        <span class="points-number">2</span>
-                        <span class="points-plus">+</span>
-                        <span class="points-description">Mini-games</span>
-                    </span>
+                    <div class="popular-words">
+                        <div class="popular-words-number">
+                            <span class="popular-words-icon"><iconify-icon icon="mingcute:lightning-fill"></iconify-icon></span>
+                            <span class="popular-words-number">600</span>
+                            <span class="popular-words-plus">+</span>
+                        </div>
+                        <span class="popular-words-name">Popular words</span>
+                    </div>
+                    <span class ="points-divider"></span>
+                    <div class="mini-games">
+                        <div class="mini-games-number">
+                            <span class="mini-games-icon"><iconify-icon icon="mdi:nintendo-game-boy"></iconify-icon></span>
+                            <span class="mini-games-number">2</span>
+                            <span class="mini-games-plus">+</span>
+                        </div>
+                        <span class="mini-games-name">Mini-games</span>
+                    </div>
                 </div>
                 <img class="ad-info-blok-img" src="boy_with_book.svg" alt="boy with book">
             </li>
