completion of the main page

--- a/home_page.html
+++ b/home_page.html
@@ -22,16 +22,19 @@
             </a>
         </div>
     </header>
+
     <section class="ad-info">
         <ul class="ad-info-list">
-            <li class="ad-info-blok odd">
-                <p class="blok-discription-one">E-COURSE PLATFORM</p>
-                <h1 class="blok-main-title">Learning and teaching online, made easy.</h1>
-                <p class="blok-description-two">Practice and learn new things with the platform.</p>
-                <a class="blok-buttom" href="">About platform</a>
-                <div class="ad-info-blok-learning-points">
+            <li class="ad-info-block odd">
+                <div class="ad-info-block-text">
+                    <p class="meaning-platform">E-COURSE PLATFORM</p>
+                    <h1 class="block-main-title">Learning and teaching online, made easy.</h1>
+                    <p class="block-description">Practice and learn new things with the platform.</p>
+                </div>
+                <div class="ad-info-block-buttom"><a class="block-buttom" href="">About platform</a></div>
+                <div class="ad-info-block-learning-points">
                     <div class="popular-words">
-                        <div class="popular-words-number">
+                        <div class="popular-words-number-info">
                             <span class="popular-words-icon"><iconify-icon icon="mingcute:lightning-fill"></iconify-icon></span>
                             <span class="popular-words-number">600</span>
                             <span class="popular-words-plus">+</span>
@@ -40,7 +43,7 @@
                     </div>
                     <span class ="points-divider"></span>
                     <div class="mini-games">
-                        <div class="mini-games-number">
+                        <div class="mini-games-number-info">
                             <span class="mini-games-icon"><iconify-icon icon="mdi:nintendo-game-boy"></iconify-icon></span>
                             <span class="mini-games-number">2</span>
                             <span class="mini-games-plus">+</span>
@@ -48,58 +51,67 @@
                         <span class="mini-games-name">Mini-games</span>
                     </div>
                 </div>
-                <img class="ad-info-blok-img" src="boy_with_book.svg" alt="boy with book">
+                <img class="ad-info-block-img-one" src="boy_with_book.svg" alt="boy with book">
             </li>
 
-            <li class="ad-info-blok couples">
-                <img class="ad-info-blok-img" src="girl_with_table.svg" alt="girl with table">
-                <h1 class="blok-main-title">Learn a language in a playful way</h1>
-                <p class="blok-description">Make learning words more fun with mini-games</p>
-                    <div class="ad-info-blok-game-points">
-                        <a class="game-point"  href="">
-                            <img class="game-point-img" src="sneakers.svg" alt="sneakers">
-                            <p class="game-point-one-name" >Sprint →</p>
+            <li class="ad-info-block couples">
+                <img class="ad-info-block-img-two" src="girl_with_table.svg" alt="girl with table">
+                <div class="ad-info-block-text">
+                    <h1 class="block-title">Learn a language in a playful way</h1>
+                    <p class="block-description">Make learning words more fun with mini-games</p>
+                </div> 
+                <div class="ad-info-block-game-points-conteiner">
+                    <div class="ad-info-block-game-points">
+                        <a class="sprint"  href="">
+                            <img class="sprint-img" src="sneakers.svg" alt="sneakers">
+                            <p class="sprint-name" >Sprint →</p>
                         </a>
-                        <a class="game-point"  href="">
-                            <img class="game-point-img" src="speaker.svg" alt="speaker">
-                            <p class="game-point-two-name">Audio-call →</p>
+                        <a class="audio-call"  href="">
+                            <img class="audio-call-img" src="speaker.svg" alt="speaker">
+                            <p class="audio-call-name">Audio-call →</p>
                         </a>
                     </div>
+                </div>
             </li>
 
-            <li class="ad-info-blok odd">
-                <h1 class="blok-main-title">Increase your vocabulary</h1>
-                <p class="blok-description">Traditional and new effective approaches to word study</p>
-                <a class="blok-buttom" href="">Textbook →</a>
-                <img class="ad-info-blok-img" src="girl_with_books.svg" alt="girl with books">
+            <li class="ad-info-block odd">
+                <div class="ad-info-block-text">
+                    <h1 class="block-title">Increase your vocabulary</h1>
+                    <p class="block-description">Traditional and new effective approaches to word study</p>
+                </div>
+                <div class="ad-info-block-buttom"><a class="block-buttom" href="">Textbook →</a></div>
+                <img class="ad-info-block-img-three" src="girl_with_books.svg" alt="girl with books">
             </li>
-            <li class="ad-info-blok couples">
-                <img class="ad-info-blok-img" src="girl_and_boy.png" alt="girl and boy">
-                <h1 class="blok-main-title">Watch your progress every day</h1>
-                <p class="blok-description">Save statistics on your achievements, words learned, and mistakes</p>
-                <a class="blok-buttom" href="">Statistics →</a>
+            <li class="ad-info-block couples">
+                <img class="ad-info-block-img-four" src="girl_and_boy.png" alt="girl and boy">
+                <div class="ad-info-block-text">
+                    <h1 class="block-title">Watch your progress every day</h1>
+                    <p class="block-description">Save statistics on your achievements, words learned, and mistakes</p>
+                </div>
+                <div class="ad-info-block-buttom"><a class="block-buttom" href="">Statistics →</a></div>
             </li>
         </ul>
     </section>
-    <footer>
+    <footer class="footer">
         <div class="footer-navigation">
             <ul class="footer-navigation-site-page">
-                <li><a class="footer-navigation-component" href="">Home</a></li>
-                <li><a class="footer-navigation-component" href="">Textbook</a></li>
-                <li><a class="footer-navigation-component" href="">Statistics</a></li>
-                <li><a class="footer-navigation-component" href="">Sprint</a></li>
-                <li><a class="footer-navigation-component" href="">Audio-call</a></li>
+                <li><a class="site-page-component" href="">Home</a></li>
+                <li><a class="site-page-component" href="">Textbook</a></li>
+                <li><a class="site-page-component" href="">Statistics</a></li>
+                <li><a class="site-page-component" href="">Sprint</a></li>
+                <li><a class="site-page-component" href="">Audio-call</a></li>
             </ul>
             <ul class="footer-navigation-tutors">
-                <li><a class="footer-navigation-component" href="">Alex</a></li>
-                <li><a class="footer-navigation-component" href="">Gabriel</a></li>
-                <li><a class="footer-navigation-component" href="">Marcus</a></li>
+                <li><a class="tutors-component" href="">Alex</a></li>
+                <li><a class="tutors-component" href="">Gabriel</a></li>
+                <li><a class="tutors-component" href="">Marcus</a></li>
             </ul>
         </div>
+        <div class="line"></div>
         <ul class="social-networks">
-            <li><a class="github" href=""><img class="social-networks-icon" src="" alt="github icon"></a></li>
-            <li><a class="gt" href=""><img class="social-networks-icon" src="" alt="gt icon"></a></li>
-            <li><a class="youtube" href=""><img class="social-networks-icon" src="" alt="youtube icon"></a></li>
+            <li><a class="github" href=""><iconify-icon icon="fe:github-alt"></iconify-icon></a></li>
+            <li><a class="gt" href=""><iconify-icon icon="cryptocurrency:gto"></iconify-icon></a></li>
+            <li><a class="youtube" href=""><iconify-icon icon="bi:youtube"></iconify-icon></a></li>
         </ul>
         <p class="company-info">©2021 GlobalTalk. Project for <a  class="globaltalk-link" href="">GlobalTalk.</a></p>
     </footer>
