finish menu page

--- a/home_page.html
+++ b/home_page.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="site-navigation">
-            <a class="menu-list-icon" href="">
+            <a class="menu-list-icon" href="menu_page.html">
                 <iconify-icon icon="bx:menu-alt-left"></iconify-icon>
             </a>
         <h1 class="logo-title">GlobalTalk</h1>
