--- a/menu_page.html
+++ b/menu_page.html
@@ -24,7 +24,7 @@
 </header>
     <nav class="site-menu">
         <ul class="site-menu-blok">
-            <li class="site-menu-blok-components"><a class="site-menu-blok-components-link active" href="">Home</a></li>
+            <li class="site-menu-blok-components"><span class="site-menu-blok-components-link active" href="">Home</span></li>
             <li class="site-menu-blok-components"><a class="site-menu-blok-components-link" href="">Textbook</a></li>
             <li class="site-menu-blok-components"><a class="site-menu-blok-components-link" href="">Statistics</a></li>
             <li class="site-menu-blok-components"><a class="site-menu-blok-components-link" href="">Sprint</a></li>
