--- a/home_page.html
+++ b/home_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>global-talk-templat</title>
+    <title>Global Talk</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
 </head>
 <body>
@@ -23,16 +23,16 @@
         </div>
     </header>
 
-    <section class="ad-info">
-        <ul class="ad-info-list">
-            <li class="ad-info-block odd">
-                <div class="ad-info-block-text">
+    <section class="main-info">
+        <ul class="main-info-list">
+            <li class="main-info-block odd">
+                <div class="main-info-block-text">
                     <p class="meaning-platform">E-COURSE PLATFORM</p>
                     <h1 class="block-main-title">Learning and teaching online, made easy.</h1>
                     <p class="block-description">Practice and learn new things with the platform.</p>
                 </div>
-                <div class="ad-info-block-buttom"><a class="block-buttom" href="">About platform</a></div>
-                <div class="ad-info-block-learning-points">
+                <div class="main-info-block-buttom"><a class="block-buttom" href="">About platform</a></div>
+                <div class="main-info-block-learning-points">
                     <div class="popular-words">
                         <div class="popular-words-number-info">
                             <span class="popular-words-icon"><iconify-icon icon="mingcute:lightning-fill"></iconify-icon></span>
@@ -51,44 +51,45 @@
                         <span class="mini-games-name">Mini-games</span>
                     </div>
                 </div>
-                <img class="ad-info-block-img-one" src="boy_with_book.svg" alt="boy with book">
+                <img class="main-info-block-img-one" src="boy_with_book.svg" alt="boy with book">
             </li>
 
-            <li class="ad-info-block couples">
-                <img class="ad-info-block-img-two" src="girl_with_table.svg" alt="girl with table">
-                <div class="ad-info-block-text">
+            <li class="main-info-block couples">
+                <img class="main-info-block-img-two" src="girl_with_table.svg" alt="girl with table">
+                <div class="main-info-block-text">
                     <h1 class="block-title">Learn a language in a playful way</h1>
                     <p class="block-description">Make learning words more fun with mini-games</p>
                 </div> 
-                <div class="ad-info-block-game-points-conteiner">
-                    <div class="ad-info-block-game-points">
+                <div class="main-info-block-game-points-conteiner">
+                    <div class="main-info-block-game-points">
                         <a class="sprint"  href="">
                             <img class="sprint-img" src="sneakers.svg" alt="sneakers">
-                            <p class="sprint-name" >Sprint →</p>
+                            <p class="sprint-name" >Sprint <span class="sprint-name-arrow">→</span></p>
+                
                         </a>
                         <a class="audio-call"  href="">
                             <img class="audio-call-img" src="speaker.svg" alt="speaker">
-                            <p class="audio-call-name">Audio-call →</p>
+                            <p class="audio-call-name">Audio-call <span class="audio-call-name-arrow">→</span></p>
                         </a>
                     </div>
                 </div>
             </li>
 
-            <li class="ad-info-block odd">
-                <div class="ad-info-block-text">
+            <li class="main-info-block odd">
+                <div class="main-info-block-text">
                     <h1 class="block-title">Increase your vocabulary</h1>
                     <p class="block-description">Traditional and new effective approaches to word study</p>
                 </div>
-                <div class="ad-info-block-buttom"><a class="block-buttom" href="">Textbook →</a></div>
-                <img class="ad-info-block-img-three" src="girl_with_books.svg" alt="girl with books">
+                <div class="main-info-block-buttom"><a class="block-buttom" href="">Textbook →</a></div>
+                <img class="main-info-block-img-three" src="girl_with_books.svg" alt="girl with books">
             </li>
-            <li class="ad-info-block couples">
-                <img class="ad-info-block-img-four" src="girl_and_boy.png" alt="girl and boy">
-                <div class="ad-info-block-text">
+            <li class="main-info-block couples">
+                <img class="main-info-block-img-four" src="girl_and_boy.png" alt="girl and boy">
+                <div class="main-info-block-text">
                     <h1 class="block-title">Watch your progress every day</h1>
                     <p class="block-description">Save statistics on your achievements, words learned, and mistakes</p>
                 </div>
-                <div class="ad-info-block-buttom"><a class="block-buttom" href="">Statistics →</a></div>
+                <div class="main-info-block-buttom"><a class="block-buttom" href="">Statistics →</a></div>
             </li>
         </ul>
     </section>
